attemptting to fix mobile background jump again

--- a/assets/styles/blocks/_parallax-background.scss
+++ b/assets/styles/blocks/_parallax-background.scss
@@ -3,7 +3,7 @@
   top: 0;
   left: 0;
   right: 0;
-  height: 100vh;
+  min-height: 100vh;
   z-index: -1;
 
   &__image {
